--- a/css/styles.css
+++ b/css/styles.css
@@ -35,11 +35,12 @@ body {
   /* display: flex; */
   /* flex-wrap: wrap; */
   /* max-width: 100%; */
-}
+
 footer {
   text-align: left;
   font-family: 'Libre Barcode 128 Text', sans-serif;
+  font-size: 25px;
   height: auto;
-  position: relative;
+  position: fixed;
   bottom: 0px;
 }
